--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
-    <title>Odontología Acosta | Implantes | Tratamientos odontológicos</title>
+    <title>Odontología Acosta | Protesis | Tratamientos odontológicos</title>
 </head>
 <body>
     <header>
@@ -33,7 +33,7 @@
                 <button type="submit">🔍</button>
             </form>
         </div>
-
+        
     </header>
 
  <!-- 
