--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
 
         <div class="logo">
-            <img src="./img/imagelogosolo.jpeg" alt="image">
+            <img src="./img/logo-horizontal1.jpeg" alt="image">
         </div>
 
         <div>
@@ -33,7 +33,7 @@
                 <button type="submit">🔍</button>
             </form>
         </div>
-        
+
     </header>
 
  <!-- 
