--- a/index.html
+++ b/index.html
@@ -48,7 +48,31 @@
     </div> 
 -->   
 
+<div>
 
+</div>
+
+<div class="banner">
+    <img src="./img/image6.1.1.jpeg" alt="img">
+</div>
+
+<div class="titulo-acerca-de-mi">
+    <h2>Acerca de mi</h2>
+</div>
+
+<div>
+    <div class="txt-presentacion">
+        <p>
+            La Dra. Ana Florencia Acosta ofrece un enfoque odontológico que prioriza la tranquilidad del paciente. Su práctica se centra en crear un ambiente de confianza y calidez, donde cada individuo, especialmente aquellos que experimentan ansiedad, pueda sentirse plenamente seguro y acompañado durante todo el proceso de su tratamiento. Su compromiso es redefinir la experiencia dental, transformándola en un encuentro cómodo y positivo, focalizado en el bienestar integral de su salud bucal y su tranquilidad personal.
+        </p>
+    </div>
+    
+    <div class="img-afa">
+        <img src="" alt="">
+    </div>
+
+
+</div>
     <script src="script.js"></script>
 
 </body>
