Agregue seccion hero (banner) al index.html

--- a/index.html
+++ b/index.html
@@ -38,6 +38,22 @@
 
     </header>
 
+<!--Seccion hero (banner)-->
+
+<section class="hero-section">
+    <div class="wrap-hero-section">
+        <h1>Tu salud buscal en manos expertas de una profesional</h1>
+        <br>
+        <p>En odontología Acosta encontrarás la dedicación y el conocimiento que necesitas.<br> 
+        La Dra. Acosta te guiará personalmente en cada paso, asegurando un plan de tratamiento claro y sin sorpresas.</p>
+        <br>
+        <br>
+        <div class="wrap-cta">
+            <a href="https://wa.me/5492984401229" target="_blank" class="cta-a">Saca tu turno</a>
+        </div>
+    </div>
+</section>
+
 
 
 <script src="script.js"></script>
