Agregue seccion Acerca de mi en el index.html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,36 @@
     </div>
 </section>
 
+<!--Seccion "acerca de mi" dividida en dos columnas-->
+
+<section class="section two-column-section">
+    <div class="wrap-title-section">
+        <h2>Acerca de mi</h2>
+    </div>
+
+    <div class="wrap-two-column">
+        <div class="wrap-img_two-column">
+            <img src="./img/IMG_7293.JPEG" alt="">
+        </div>
+
+        <div class="wrap-img_two-column">
+            <div class="wrap-text-column">
+                <h3>Atención odontológica personalizada</h3>
+                <p>En este consulorio, la Dra. Acosta atiende personalmente a sus pacientes, 
+                    garantizandola máxima calidad y un trato humano y cercano, desde su 
+                    diagnóstico inicial hasta la finalización de su tratamiento. Aquí, su salud
+                    dental está en manos de una profesional dedicada que acompaña en cada paso.
+                </p>
+
+                <div class="wrap-cta">
+                    <a href="/" class="cta-a">Ver más</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+
 
 
 <script src="script.js"></script>
