Agregue seccion Tratamientos al index.html

--- a/index.html
+++ b/index.html
@@ -84,6 +84,45 @@
 
 </section>
 
+<!--Seccion "tratamientos"-->
+
+<section class="section-tratamientos-section">
+
+    <div class="wrap-title-section">
+        <h2>Tratamientos</h2>
+    </div>
+
+    <div class="wrap-tratamientos-section">
+
+        <a href="" class="item-tratamientos-section">
+            <img src="./img/imagenes/4.PROTESIS Y REHABILITACION ORAL/PROTESISYREHABILITACIONORAL.jpg" alt="">
+                <h3>Protesis y rehabilitación oral</h3>
+                    <p>Restaura la función y estética de tu sonrisa reemplazando dientes perdidos o dañados. Este tratamiento se especializa en la fabricación e instalación de prótesis dentales y coronas para recuperar tu mordida y confianza.</p>
+            </img>
+        </a>
+
+        <a href="" class="item-tratamientos-section">
+            <img src="./img/imagenes/3.LIMPIEZA DENTAL PROFESIONAL/LIMPIEZAPROFESIONAL1.jpg" alt="">
+                <h3>Cuidado integral bucal</h3>
+                    <p>Técnicas profesionales de limpieza dental profunda que aseguran una higiene bucal completa y tratamientos de blanqueamiento dental para una estética dental mejorada.</p>
+            </img>
+        </a>
+
+        <a href="" class="item-tratamientos-section">
+            <img src="./img/imagenes/6.CIRUGIA DENTAL/CIRUGIADENTAL1.jfif" alt="">
+                <h3>Cirugía dental</h3>
+                    <p>Tratamiento odontológico para resolver problemas bucales complejos, desde extracciones de muelas de juicio hasta las extracciones de piezas dentales dañadas no recuperables.</p>      
+            </img>
+        </a>
+
+    </div>
+
+    <div class="button-tratamientos">
+        <button>Mas tratamientos</button>
+    </div>
+
+</section>
+
 
 
 <script src="script.js"></script>
