Agregue seccion Medios de pago al index.html

--- a/index.html
+++ b/index.html
@@ -123,6 +123,27 @@
 
 </section>
 
+<!--Seccion "medios de pago"-->
+
+<section class="medios-de-pago">
+    <div class="wrap-title-section">
+        <h2>Medios de pago</h2>
+    </div>
+
+    <div>
+        <ul class="main-menu">
+            <li>Efectivo</li>
+            <li>Transferencias</li>
+            <li>Tarjetas de débito</li>
+            <li>Tarjetas de crédito</li>
+        </ul>
+    </div>
+
+    <div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum provident eaque aspernatur corrupti illo iste, excepturi eum non exercitationem quasi?</p>
+    </div>
+</section>
+
 
 
 <script src="script.js"></script>
