Agregue seccion Contactate ya al index.html

--- a/index.html
+++ b/index.html
@@ -144,6 +144,19 @@
     </div>
 </section>
 
+<!--Seccion "contactate ya"-->
+
+<section class="contactate">
+    <div class="contactate-ya">
+        <h3>¿Necesitas mas información?</h3>
+        <p>No esperes mas, contactate por whatsapp y recibi atencion personalizada</p>
+
+        <div class="wrap-cta-whatsapp">
+            <a href="/" class="cta-a">WhatsApp</a>
+        </div>
+    </div>
+</section>
+
 
 
 <script src="script.js"></script>
