--- a/index.html
+++ b/index.html
@@ -157,6 +157,27 @@
     </div>
 </section>
 
+<section class="ubicacion">
+    <section class="section two-column-section">
+        <div class="wrap-title-section">
+            <h2>Consultorios ubicados en:</h2>
+        </div>
+
+        <div class="wrap-two-column">
+            <p>Avenida Villarino 496, Viedma, Rio Negro</p>
+            <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3020.097481525772!2d-62.99474612245751!3d-40.8038516107748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95f6980ab6fed0cf%3A0x686e36397a82183f!2sAv.%20Villarino%20496%2C%20Viedma%2C%20R%C3%ADo%20Negro!5e0!3m2!1ses!2sar!4v1759157436746!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+        <div class="wrap-two-column">
+            <p>Artémides Zatti 350, Viedma, Rio Negro</p>
+            <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.5554529845554!2d-62.997638504542095!3d-40.81576163769498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95f698133e226749%3A0x83cdd1a36969f2f7!2sArt%C3%A9mides%20Zatti%20350%2C%20R8500BIQ%20Viedma%2C%20R%C3%ADo%20Negro!5e0!3m2!1ses!2sar!4v1759157794388!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+
+</section>
 
 
 <script src="script.js"></script>
