Agregue el footer al index.html

--- a/index.html
+++ b/index.html
@@ -179,6 +179,53 @@
 
 </section>
 
+<footer class="footer-section">
+    <div class="wrap-footer-section">   
+        <div class="info">
+            <img src="./img/logo-horizontal1.jpeg" alt="">
+            <h3>Odontologia Acosta</h3>
+            <p>Dirección: Avenida Villarino 496, Viedma, Rio Negro.</p>
+            <p>Artemides Zatti 350, Viedma, Rio Negro</p>
+            <p>Telefono: +54 (2984) 401229</p>
+            <p>Email: odafacosta@gmail.com</p>
+        </div>
+        <nav class="footer-menu">
+            <h4>Menu</h4>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#acercademi">Acerca de mi</a></li>
+                <li><a href="#tratamientos">Tratamientos</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+        <div class="footer-tratamientos">
+            <h4>Tratamientos</h4>
+            <ul>
+                <li><a href="#odontologiaconservadora">Odontología conservadora</a></li>
+                <li><a href="#bruxismo">Bruxismo</a></li>
+                <li><a href="#cuidadointegralbucal">Cuidado integral bucal</a></li>
+        </div>
+        <div class="footer-tratamientos2">
+
+            <ul>
+                <li><a href="#protesisyrehabilitacionoral">Prótesis y rehabilitacón oral</a></li>
+                <li><a href="#periodoncia">Periodoncia</a></li>
+                <li><a href="#cirugiadental">Cirugía dental</a></li>
+        </div>
+        <div class="footer-data-fiscal">
+            <h4>Data fiscal</h4>
+            <a href="http://qr.afip.gob.ar/?qr=IM_kqUhdqRCagP18UFNcrg,," target="_F960AFIPInfo"><img src="http://www.afip.gob.ar/images/f960/DATAWEB.jpg" border="0"></a>
+        </div>
+
+        <div class="menu-footer-section">
+            <div class="footer-creds">
+                <p>©copyright 2025 - Odontologia Integral Acosta | Todos los derechos reservados</p>
+            </div>
+        </div>
+    </div>
+
+</footer>
+
 
 <script src="script.js"></script>
 
