Se mejoro el css de la seccion Acerca de mi del index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 
     </header>
 
-<!--Seccion hero (banner)-->
 
 <section class="hero-section">
     <div class="wrap-hero-section">
@@ -179,6 +178,8 @@
 
 </section>
 
+<!--Footer-->
+
 <footer class="footer-section">
     <div class="wrap-footer-section">   
         <div class="info">
@@ -225,8 +226,6 @@
     </div>
 
 </footer>
-
-
 
 <script src="script.js"></script>
 
