Correcciones del css Tratamientos en el index.html

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 
     </div>
 
-    <div class="button-tratamientos">
-        <button>Mas tratamientos</button>
+    <div class="wrap-cta">
+        <a href="/" class="cta-a">Más tratamientos</a>
     </div>
 
 </section>
