Se agrego el css Medios de pago en el index.html

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
 
     <div>
-        <ul class="main-menu">
+        <ul class="main-menu-pagos">
             <li>Efectivo</li>
             <li>Transferencias</li>
             <li>Tarjetas de débito</li>
@@ -139,7 +139,7 @@
     </div>
 
     <div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum provident eaque aspernatur corrupti illo iste, excepturi eum non exercitationem quasi?</p>
+        <p>En caso de requerir factura para la gestión de reintegro ante su obra social o empresa de medicina prepaga, podrá solicitarla al momento de la atención.</p>
     </div>
 </section>
 
