Agregue estilos css a Contactate ya en el index.html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <p>No esperes mas, contactate por whatsapp y recibi atencion personalizada</p>
 
         <div class="wrap-cta-whatsapp">
-            <a href="/" class="cta-a">WhatsApp</a>
+            <a href="/" class="cta-a-whatsapp">WhatsApp</a>
         </div>
     </div>
 </section>
